# nta-lab1

./: Dockerfile  README.md  __main__.py  bm.py  common.py  docker.dockerfile  miller_rabin.py  pollard.py  pyproject.toml  trial_division.py
nta_lab1/: README.md  __init__.py  __main__.py  benchmark.py  bm.py  canonical.py  common.py  miller_rabin.py  pollard.py  primes.py  sle.py  solovay_strassen.py  timestats.py  trial_division.py
src/: __main__.py  bm.py  pollard.py  sle.py  solovay_strassen.py  trial_division.py
