[tool.poetry]
name = "nta_lab1"
version = "0.1.0"
description = ""
authors = ["timofey282228 <tymopod-ipt25@lll.kpi.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
